[gd_scene load_steps=2 format=3 uid="uid://bmvolrc3ww20d"]

[ext_resource type="Script" path="res://scenes/UI/save_menu.gd" id="1_5wvif"]

[node name="SaveMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("1_5wvif")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Saves" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SavesContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Saves"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_constants/separation = 20

[node name="Buttons" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 50

[node name="SaveButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
text = "Save"

[node name="EraseButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
text = "Erase"

[node name="BackButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Buttons/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Buttons/EraseButton" to="." method="_on_erase_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Buttons/BackButton" to="." method="_on_back_button_pressed"]
